lintian-brush (0.130) UNRELEASED; urgency=medium

  * Include aliases for releases in changelog. Closes: #1018697

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 30 Aug 2022 01:03:42 +0100

lintian-brush (0.129) unstable; urgency=medium

  * Add fixer old-override-info-format: updates lintian overrides to new
    format. Closes: #1014407
  * package-uses-deprecated-source-override-location: cope with existing
    debian/source/lintian-overrides.
  * Update key versions.
  * debbugs: Fix database connectivity logic.
  * out-of-date-standards-version: Update for 4.6.1.
  * deb-scrub-obsolete(1): Document supported values for RELEASE in
    arguments.
  * Tweak wording in message when tree is dirty.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 29 Aug 2022 20:58:14 +0100

lintian-brush (0.128) unstable; urgency=medium

  * Add missing dependency on python3-semver.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 08 Jul 2022 19:45:01 +0100

lintian-brush (0.127) unstable; urgency=medium

  * Fix compatibility with newer python-debian/debmutate.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 08 Jul 2022 15:04:03 +0100

lintian-brush (0.126) unstable; urgency=medium

  * Add --yolo argument.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 28 May 2022 13:16:34 +0100

lintian-brush (0.125) unstable; urgency=medium

  [ Jelmer Vernooĳ ]
  * Depend on newer brz-debian.
  * Add fixer for new-package-uses-date-based-version-number.
  * Add fixerf for initial-upload-closes-no-bugs.
  * debug-symbol-migration-possibly-complete: avoid removing unnecessary
    overrides when not changing anything.

  [ Geert Stappers ]
  * Actually ship debianize.1.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Thu, 26 May 2022 10:17:18 +0100

lintian-brush (0.124) unstable; urgency=medium

  * Add --debian-binary argument to debianize.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 10 Apr 2022 17:02:32 +0100

lintian-brush (0.123) unstable; urgency=medium

  * Drop debian/upstream/metadata: package is native.